# edcraft-engine

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml  setup.sh
.github/workflows/: docker-publish.yml
src/api/: app.py
src/api/routes/: question_generation.py
src/core/form_builder/: form_builder.py  models.py  static_analyser.py
src/core/query_engine/: pipeline_steps.py  query_engine.py  utils.py
src/core/question_generator/: distractor_generator.py  query_generator.py  text_generator.py
src/core/question_generator/distractor_strategies/: base_strategy.py  (+2 more)
src/core/static_analyser/: models.py  static_analyser.py
src/core/step_tracer/: step_tracer.py  tracer_transformer.py
src/edcraft_engine/: __init__.py
src/edcraft_engine/form_builder/: form_builder.py  static_analyser.py
src/edcraft_engine/models/: question_models.py
src/edcraft_engine/query_engine/: pipeline_steps.py  query_engine.py  utils.py
src/edcraft_engine/question_generator/: README.md  __init__.py  distractor_generator.py  models.py  query_generator.py  question_generator.py  text_generator.py
src/edcraft_engine/static_analyser/: README.md  __init__.py  static_analyser.py
src/edcraft_engine/step_tracer/: step_tracer.py
src/models/: api_models.py  form_models.py  static_analyser_models.py  tracer_models.py
tests/: test_cases.py  test_question_generator.py
tests/core/: test_step_tracer.py
tests/question_generator/: conftest.py
tests/question_generator/distractor_generator/: test_distractor_generator.py  test_output_modification_strategy.py  test_query_variation_strategy.py
tests/question_generator/text_generator/: test_context_builder.py  test_generate_question.py  test_input_data.py  test_question_type.py  test_target_builder.py
tests/static_analyser/: conftest.py  test_branches.py  test_functions.py  test_loops.py  test_static_analyser.py  test_variables.py
(+16 files in other folders)
